<resources>
    <string name="app_name">Password Generator</string>
    <string name="character_count_instructions">Select number of characters</string>
    <string name="include_capitals">include capitals</string>
    <string name="default_text">default text</string>
    <string name="include_special_characters">include special characters</string>
    <string name="create_password">Create Password</string>
    <string name="include_numbers">include numbers</string>
    <string name="default_number">4</string>
    <string name="result_dialog_instructions">Password will not be saved passed this point</string>
    <string name="password_results_default">password results</string>
    <string name="ok">OK</string>
</resources>